--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href= "assets/css/reset.css">
     <title>Word Guess Game</title>
   </head>
   <body>
-    <h1>WORD GUESS GAME</h1>
    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    
-    <div class="box">
-      <img src="assets/images/underwater.png" alt="background underwater">
-    </div>
+   
+   <div class= "container">
+      <div class="jumbotron vertical-center jumbotron-fluid mx-auto text-center">
+          <div class="container">
+            <h1 class="display-4">Fluid jumbotron</h1>
+            <h1 class="display-3">guesses</h1>
+            <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+          </div>
+        </div>
 
+   </div>
+   
 
     </div>
    
