--- a/index.html
+++ b/index.html
@@ -1,30 +1,49 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href= "assets/css/reset.css">
-    <title>Word Guess Game</title>
-  </head>
-  <body>
-   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-   
-   <div class= "container">
-      <div class="jumbotron vertical-center jumbotron-fluid mx-auto text-center">
-          <div class="container">
-            <h1 class="display-4">Fluid jumbotron</h1>
-            <h1 class="display-3">guesses</h1>
-            <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-          </div>
-        </div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-   </div>
-   
+  <!-- // LINKS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/reset.css">
+  <link href="https://fonts.googleapis.com/css?family=Carter+One&display=swap" rel="stylesheet">
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  
+
+  <title>Word Guess Game</title>
+</head>
+
+<body>
+  <div id="empty-div"></div>
+
+  <script type="text/javascript">
+
+  <div class="container">
+    <div class="jumbotron vertical-center, jumbotron-fluid, mx-auto text-center">
+      <div class="container">
+        <h1 class="display-4">WORD GUESS GAME</h1>
+        <h2>Press Any Key To Get Started</h2>
+        <h1 id="RandomWord">_ _ _ _ _ _ _ _ _ _</h1>
+        <h2 id="GuessesLeft">Guesses Left:</h2>
+        <h3 id="GuessedLetter">Letters You've Guessed:<h3>
+            <br>
+            <h1 id="WinsCount">Wins:</h1>
+            <br>
+            <h1 id="LossCount">Losses:</h1>
+      </div>
     </div>
-   
-  </body>
+  </div>
+ 
+</body>
+
+<script type="text/javascript" src="./assets/javascript/game.js"></script>
+
+</script>
+
+
 </html>
