--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
 <body>
   <div id="empty-div"></div>
 
-  <script type="text/javascript">
 
   <div class="container">
-    <div class="jumbotron vertical-center, jumbotron-fluid, mx-auto text-center">
+    <div class="jumbotron vertical-center jumbotron-fluid mx-auto text-center">
       <div class="container">
         <h1 class="display-4">WORD GUESS GAME</h1>
         <h2>Press Any Key To Get Started</h2>
